Mon Sep 23 10:42:30 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* test/ruby/test_module.rb (TestModule#test_include_toplevel): test
	  for top level main.include.  based on a part of the patch by
	  kyrylo at [GH-395].

Mon Sep 23 05:07:49 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/intern.h (rb_ary_cat): move from internal.h, since it
	  is described in README.EXT.

Sun Sep 22 20:55:20 2013  Kazuki Tsujimoto  <kazuki@callcc.net>

	* vm_insnhelper.c (vm_make_proc_with_iseq): fix bug message.
	  This is follow up to changes in r42637.

Sun Sep 22 20:35:38 2013  Kazuki Tsujimoto  <kazuki@callcc.net>

	* ext/-test-/tracepoint/tracepoint.c (Init_tracepoint): prevent from GC.

Sun Sep 22 19:00:28 2013  Benoit Daloze  <eregontp@gmail.com>

	* benchmark/bm_app_answer.rb: revert r42990, benchmark scripts should
	  be self-contained and avoid dependencies, especially such small one.
	  See https://github.com/ruby/ruby/pull/393#issuecomment-24861301.

Sat Sep 21 20:11:06 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* process.c (rb_fork_internal): remove cloexec setting on pipes
	  created by rb_cloexec_pipe.  patch by normalperson (Eric Wong) at
	  [ruby-core:56523].  [Bug #8769]

Sat Sep 21 01:04:25 2013  Zachary Scott  <e@zzak.io>

	* lib/benchmark.rb: [DOC] grammar of Benchmark#bm [Bug #8888]
	  Patch by Prathamesh Sonpatki

Sat Sep 21 00:50:02 2013  Zachary Scott  <e@zzak.io>

	* enumerator.c: [DOC] Enumerator#each arguments documentation [GH-388]
	  Patch by @kachick  https://github.com/ruby/ruby/pull/388

Sat Sep 21 00:49:16 2013  Zachary Scott  <e@zzak.io>

	* enum.c: [DOC] Enumerable#to_a accepts arguments [GH-388]
	  Patch by @kachick https://github.com/ruby/ruby/pull/388

Sat Sep 21 00:47:44 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (rb_str_conv_enc_opts): make sure to scan coderange to get
	  rid of unnecessary conversion.

Sat Sep 21 00:21:08 2013  Zachary Scott  <e@zzak.io>
