@@ -1,3 +1,8 @@
+Mon Sep 23 12:11:26 2013  Masaki Matsushita  <glass.saga@gmail.com>
+
+	* hash.c (env_each_pair): do not call rb_assoc_new() if
+	  it isn't needed.
+
 Mon Sep 23 10:42:30 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* test/ruby/test_module.rb (TestModule#test_include_toplevel): test
